2015-02-09  Per Bothner  <per@bothner.com>

	* inlining-test.scm: Update to use new type specifier syntax.
	* module2.scm: Likewise.
	* obj-test.scm: Likewise.
	* sva36039.scm: Likewise.
	* sva36853.scm: Likewise.
	* sva36863.scm: Likewise.

2015-02-09 Seth Alves <alves@hungry.com>

	* inline2.scm: New test - used to cause VerifyError.
	* Makefile.am (SCRIPTS_TO_RUN): Update accordingly.

2015-02-07  Per Bothner  <per@bothner.com>

	* misc-test.scm: Rename mutual-tailcals to mutual-tailcalls.

2015-02-02  Seth Alves <alves@hungry.com>

	* inline1.scm: New test - used to cause VerifyError.
	* Makefile.am (SCRIPTS_TO_RUN): Update accordingly.

2015-02-01  Per Bothner  <per@bothner.com>

	* inlining-test.scm (mmemq): Test tail-recursion through TypeSwitch.
	* Makefile.am: Update accordingly.
	* inlining.expected: Likewise.

2015-01-29  Per Bothner  <per@bothner.com>

	* inlining.expected: Update.

2015-01-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Use test files from srcdir instead of symlinks.

2015-01-19  Per Bothner  <per@bothner.com>

	* Makefile.am (check-ppfile): Use DIFF macro, so it works on Windows.

2015-01-11  Andrea Bernardini <andrebask@gmail.com>

	* bad-voidexp.scm: Add new test.

2014-12-28  Seth Alves <alves@hungry.com>

	* lib-receive.scm: New testcase.
	* Makefile.am: Update accordingly.

2014-12-28  Seth Alves <alves@hungry.com>
	    Per Bothner  <per@bothner.com>

	* lib-export.scm: Add test for parameterize.

2014-12-24  Andrea Bernardini <andrebask@gmail.com>
            Per Bothner  <per@bothner.com>

	* objexp1.scm: New test for object expression inside closure.
	* Makefile.am (SCRIPTS_TO_RUN): Add objexp1.scm.

2014-12-22  Per Bothner  <per@bothner.com>

	* match1.scm: Test fixed-length sequence patterns.

	* nbody.scm: Use new (! ..) declaration syntax.

2014-12-21  Seth Alves <alves@hungry.com>
            Per Bothner  <per@bothner.com>

	* sva43750.scm: New test for Savannah bug #43750
	"srfi-2 doesn't work inside r7rs library".