@@ -620,7 +620,8 @@ SCRIPTS_TO_RUN = case-warnings.scm uninit1.scm \
   promise1.scm bad-keywords1.scm splice1.scm standards1.scm \
   anonymous-lambda-1.scm unreach1.scm unreach2.scm unreach3.scm \
   bad-defclass.scm defclass1.scm defclass2.scm bad-voidexp.scm \
-  srfi-45-test1.scm srfi-45-test2.scm bad-srfi-109.scm inline1.scm inline2.scm \
+  srfi-45-test1.scm srfi-45-test2.scm bad-srfi-109.scm \
+  inline1.scm inline2.scm inline3.scm \
   define1.scm define2.scm define3.scm mac-obj.scm objexp1.scm \
   overload1.scm overload2.scm match1.scm symbol1.scm values1.scm \
   command1.scm command2.scm command3.scm exit1.scm exit2.scm lib-cycle.scm \
